Devlopment/power-dns/manifests/ingress/powerdns-admin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: powerdns-dev-admin-ingress
  namespace: dns-platform
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: powerdns-admin.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: powerdns-dev-powerdns-admin
            port:
              number: 80
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: powerdns-dev-powerdns-admin
            port:
              number: 80
